# j2a

./: .gitignore  Dockerfile  LICENSE.md  README.md
experiments/: basics.as  battery.as  battery.py  experiment.py  latency-battery.py  latency-trip.py  latency.py  throughput.py  tripreport.as  tripreport.py  tripreport_reduced.py
jsontest/antlr/: BatteryStatus.g4
jsontest/antlr/cpp/: BatteryStatus.interp  BatteryStatusBaseListener.cpp  BatteryStatusBaseListener.h  BatteryStatusLexer.cpp  BatteryStatusLexer.h  BatteryStatusLexer.interp  BatteryStatusLexer.tokens  BatteryStatusListener.cpp  BatteryStatusListener.h  BatteryStatusParser.cpp  BatteryStatusParser.h
jsontest/cpp/: .clang-format  .gitignore  Battery.g4  CMakeLists.txt  Dockerfile
jsontest/cpp/src/: arrow.h  battery.h  bitstuff.cpp  generic.h  log.h  main.cpp  schema.cpp  schema.h  status.h  trip.h  utils.h
jsontest/cpp/src/gpu/: battery.h
jsontest/cpp/test/: test_arrow.cpp
jsontest/rust/: Cargo.toml
jsontest/rust/src/: main.rs
plots/: analyze-latency.ipynb  analyze-throughput-battery.ipynb  analyze-throughput-threads.ipynb  analyze-throughput-trip.ipynb  analyze-utilization.ipynb  software.ipynb  software_battery.ipynb  software_trip.ipynb  utils.py
plots/.ipynb_checkpoints/: analyze-latency-checkpoint.ipynb  analyze-throughput-threads-checkpoint.ipynb  analyze-utilization-checkpoint.ipynb  software-checkpoint.ipynb
