[package]
name = "rust"
version = "0.1.0"
authors = ["Johan Peltenburg <j.w.peltenburg@tudelft.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rand = { version = "0.8.3", features = ["small_rng"] }
arrow = "3.0.0"
nom = "6.1.2"